# docs/swagger.json
@@ -1,12 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample serice for managing orders",
-        "title": "Orders API",
+        "description": "This is Time2Do API Server",
+        "title": "Swagger Time2Do API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
-            "email": "soberkoder@swagger.io"
+            "email": "devgunho@gmail.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -17,30 +17,6 @@
     "host": "localhost:8888",
     "basePath": "/",
     "paths": {
-        "/group": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "타이머 생성하기",
-                "responses": {}
-            }
-        },
-        "/groups": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "그룹 조회하기",
-                "responses": {}
-            }
-        },
         "/login": {
             "post": {
                 "consumes": [
@@ -49,11 +25,11 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "User Login",
+                "summary": "유저 로그인",
                 "parameters": [
                     {
                         "description": "User credentials",
-                        "name": "body",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -61,71 +37,60 @@
                         }
                     }
                 ],
-                "responses": {}
-            }
-        },
-        "/task": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "할일 생성하기",
-                "responses": {}
-            }
-        },
-        "/tasks": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "아무 조건 없이 모든 ToDo 불러오기",
-                "responses": {}
-            }
-        },
-        "/user": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "유저 생성하기",
-                "responses": {}
-            }
-        },
-        "/user/{id}": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "유저 ID 로 조회하기",
-                "responses": {}
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/users": {
-            "get": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "아무 조건 없이 모든 User 불러오기",
+                "summary": "유저 생성",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.CreateUserCommand"
+                        }
+                    }
+                ],
                 "responses": {}
             }
         }
     },
     "definitions": {
+        "controller.CreateUserCommand": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "userName": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.UserCommand": {
             "type": "object",
             "properties": {
